# mask_rcnn_ros

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml  requirements.txt  setup.py
config/: mask_rcnn.yaml
launch/: launch_rcnn.launch
models/: get_trained_model.sh
msg/: Result.msg
nodes/: mask_rcnn_node.py
src/mask_rcnn_ros/: coco.py  config.py  model.py  requirements.txt  shapes.py  test.py  visualize.py
weights/: readme.md
